make header a little less comic sans-y

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
 
-        <link href='http://fonts.googleapis.com/css?family=Capriola|Maven+Pro' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Alegreya+Sans+SC:500|Maven+Pro' rel='stylesheet' type='text/css'>
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="css/syntax.css">
