--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,8 @@ a:visited { color: #a0a; }
   height: 60px;
   line-height: 60px;
   font-size: 36px;
-  font-family: 'Capriola', sans-serif;
+  font-weight: 500;
+  font-family: 'Alegreya Sans SC', sans-serif;
   color: #FFF;
   text-shadow: rgba(0, 0, 0, 0.3) 0 1px 0;
 
